# pydaadop

./: .gitignore  404.html  AGENTS.md  Dockerfile  Dockerfile.test  LICENSE  README.md  api.Dockerfile  api.py  copilot-instructions.md  custom_model.py  docker-compose.yml  example.env  generic_model.py  index.html  init.Dockerfile  mkdocs.generated.yml  mkdocs.yml  objects.inv  opencode.json  pydaadop-upstream-fixes.md  pydaadop.code-workspace  pyproject.toml  requirements.txt  setup_mkdocs.sh  sitemap.xml
.agents/instructions/: git-commands.md  how-to-work.md  project-docker-commands.md
.agents/plan/: example-plan.md
.github/workflows/: auto_setup_release.yml  auto_setup_release_generic.yml  ci.yml  commit_to_tag.yml  deploy.yml  workflow.yml
api/queries/: index.html
api/repositories/: index.html
api/routes/: index.html
api/services/: index.html
api/utils/: index.html
badge/: v1.json
changelog/: index.html
contributing/: index.html
docs/: api.md  concepts.md  contributing.md  get-started.md  index.md  install.md  mkdocs.yml  version-policy.md
docs/api/: base_model.md  database.md  definitions.md  factories.md  models.md  repositories.md  routes.md  services.md  utils.md
docs/examples/: custom_validators.md  easy.md  extended.md  full.md  quick.md  quick_auto.md  quick_manual.md  quick_open_api.yaml  quick_overview.md  quick_results.md  quick_run.md  quick_setup.md
docs/extra/: code.css
docs/internals/: architecture.md
examples/: Dockerfile  __init__.py  api.Dockerfile  configuration.yml  docker-compose.yml  example.env  example_configuration.yml  fast_api_test.py  init.Dockerfile  quick_open_api.yaml  request_test.py  requirements.txt
examples/demo/: Dockerfile  api.py
extra/: code.css
install/: index.html
plugins/: auto_api.py
scripts/: check_display_info.py  create_indexes.py  wait_and_test.sh
search/: search_index.json
src/pydaadop/: test.py
tests/: conftest.py  example.env  test_base_list_filter.py  test_base_mongo_model.py  test_base_query.py  test_base_query_extended.py  test_base_read_repository.py  test_edge_cases.py  test_many_api_client.py  test_mcp_route.py  test_mongodb_indexes.py  test_relations_loader.py  test_relations_registry_and_many.py  test_routes_integration.py
theme/: announce.html
(+186 files in other folders)
