[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydaadop"
version = "0.0.0.15"
description = "Streamline your Python projects with Dockerized APIs, MongoDB, and Pydantic—simplifying setup and scalability."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["models", "database", "fastapi", "python", "mongodb", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Database",
    "Typing :: Typed"
]
requires-python = ">=3.10"

dependencies = [
    'fastapi>=0.115.3',
    'uvicorn>=0.32.0',
    'motor>=3.6.1',
    'pydantic>=2.9.2',
    'pymongo>=4.9.2',
    'setuptools>=75.2.0',
    'requests>=2.32.0'
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
